tests/negative/test_fnc_redef_main.orb
fnc main () () {};
fnc main (x:i32) () {};